--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 @import 'tailwindcss';
-@import '../styles/typo.css';
-@import '../styles/color.css';
+@import '../styles/typography-system.css';
+@import '../styles/color-variables.css';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: var(--grayscale-50);
 }
