--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,24 @@
 :root {
   --background: var(--grayscale-50);
 }
+
+/* ========== CUSTOM SCROLL BAR ========== */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: var(--grayscale-300);
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* Firefox 대응 */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
