--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,27 @@
   --background: var(--grayscale-50);
 }
 
+@theme {
+  --color-grayscale-50: #ffffff;
+  --color-grayscale-100: #f7f7fa;
+  --color-grayscale-200: #e4e5f0;
+  --color-grayscale-300: #c6cada;
+  --color-grayscale-400: #8f9bb2;
+  --color-grayscale-500: #474d66;
+  --color-grayscale-600: #3b4108;
+
+  --color-primary-100: #eef9f6;
+  --color-primary-200: #4cbfa4;
+  --color-primary-300: #32a68a;
+
+  --color-secondary-red-100: #fbeded;
+  --color-secondary-red-200: #d14343;
+
+  --color-secondary-purple-100: #131314;
+
+  --color-secondary-yellow-100: #ffd061;
+}
+
 /* ========== CUSTOM SCROLL BAR ========== */
 .custom-scrollbar::-webkit-scrollbar {
   width: 4px;
