--- a/src/styles/typography-system.css
+++ b/src/styles/typography-system.css
@@ -14,21 +14,21 @@ body {
 
 /* Typography Utility Classes */
 
-.text-5xl {
+.text-5xl-semibold {
   font-family: var(--font-pretendard);
   font-size: 48px;
   line-height: 46px;
   font-weight: 600;
 }
 
-.text-4xl {
+.text-4xl-bold {
   font-family: var(--font-pretendard);
   font-size: 40px;
   line-height: 42px;
   font-weight: 700;
 }
 
-.text-3xl {
+.text-3xl-bold {
   font-family: var(--font-pretendard);
   font-size: 32px;
   line-height: 38px;
@@ -42,7 +42,7 @@ body {
   font-weight: 600;
 }
 
-.text-2xl {
+.text-2xl-bold {
   font-family: var(--font-pretendard);
   font-size: 24px;
   line-height: 32px;
@@ -70,7 +70,7 @@ body {
   font-weight: 400;
 }
 
-.text-xl {
+.text-xl-bold {
   font-family: var(--font-pretendard);
   font-size: 20px;
   line-height: 32px;
@@ -98,7 +98,7 @@ body {
   font-weight: 400;
 }
 
-.text-2lg {
+.text-2lg-bold {
   font-family: var(--font-pretendard);
   font-size: 18px;
   line-height: 26px;
@@ -126,7 +126,7 @@ body {
   font-weight: 400;
 }
 
-.text-lg {
+.text-lg-bold {
   font-family: var(--font-pretendard);
   font-size: 16px;
   line-height: 26px;
@@ -154,7 +154,7 @@ body {
   font-weight: 400;
 }
 
-.text-md {
+.text-md-bold {
   font-family: var(--font-pretendard);
   font-size: 14px;
   line-height: 24px;
@@ -182,7 +182,7 @@ body {
   font-weight: 400;
 }
 
-.text-sm {
+.text-sm-semibold {
   font-family: var(--font-pretendard);
   font-size: 13px;
   line-height: 22px;
@@ -196,7 +196,7 @@ body {
   font-weight: 500;
 }
 
-.text-xs {
+.text-xs-semibold {
   font-family: var(--font-pretendard);
   font-size: 12px;
   line-height: 20px;
