--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import 'tailwindcss';
 @import '../styles/typography-system.css';
 @import '../styles/color-variables.css';
+@import '../components/TextEditor/textEditorStyle.css';
 
 :root {
   --background: var(--grayscale-50);
