feat: 자유게시판 인기게시물 컴포넌트 구현 (#90)

--- a/src/styles/typography-system.css
+++ b/src/styles/typography-system.css
@@ -320,6 +320,9 @@ body {
   --responsive-mobile-line: 18px;
   --responsive-weight: 400;
 }
+.text-weight-regular {
+  --responsive-weight: 400;
+}
 
 .text-weight-semibold {
   --responsive-weight: 600;
