feat: 베스트게시글 스크롤기능 추가 (#111)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,11 @@
 .animation-delay-300 {
   animation-delay: 0.3s;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
