--- a/src/styles/color-variables.css
+++ b/src/styles/color-variables.css
@@ -5,7 +5,7 @@
   --grayscale-300: #c6cada;
   --grayscale-400: #8f9bb2;
   --grayscale-500: #474d66;
-  --grayscale-600: #3b4108;
+  --grayscale-600: #3b415b;
 
   --primary-100: #eef9f6;
   --primary-200: #4cbfa4;
