--- a/src/components/TextEditor/textEditorStyle.css
+++ b/src/components/TextEditor/textEditorStyle.css
@@ -1,7 +1,6 @@
 /* ========== EDITOR CONTENT STYLE ========== */
 .editor-style .ProseMirror:focus {
   outline: none;
-  color: var(--color-grayscale-500);
 }
 
 .editor-style .ProseMirror {
@@ -106,4 +105,12 @@
 
 .editor-style th {
   @apply bg-gray-100 font-medium;
+}
+
+/* ---------- image ---------- */
+.ProseMirror img {
+  max-width: 100%; /* 부모 width에 맞춤 */
+  height: auto; /* 가로세로 비율 유지 */
+  display: block;
+  object-fit: contain;
 }
