--- a/src/components/TextEditor/textEditorStyle.css
+++ b/src/components/TextEditor/textEditorStyle.css
@@ -108,9 +108,7 @@
 }
 
 /* ---------- image ---------- */
-.ProseMirror img {
+.editor-style .ProseMirror img {
   max-width: 100%; /* 부모 width에 맞춤 */
   height: auto; /* 가로세로 비율 유지 */
-  display: block;
-  object-fit: contain;
 }
