--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,3 +157,27 @@
   font-weight: 600 !important;
   color: inherit !important;
 }
+
+@font-face {
+  font-family: 'NEXON Lv1 Gothic';
+  src: url('/fonts/NEXON_Lv1_Gothic/TTF/NEXONLv1GothicRegular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'NEXON Lv1 Gothic';
+  src: url('/fonts/NEXON_Lv1_Gothic/TTF/NEXONLv1GothicBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'NEXON Lv1 Gothic';
+  src: url('/fonts/NEXON_Lv1_Gothic/TTF/NEXONLv1GothicLight.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
