--- a/src/styles/color-variables.css
+++ b/src/styles/color-variables.css
@@ -1,4 +1,5 @@
 :root {
+  --grayscale-10: #ecf0fa;
   --grayscale-50: #ffffff;
   --grayscale-100: #f7f7fa;
   --grayscale-200: #e4e5f0;
@@ -14,7 +15,7 @@
   --secondary-red-100: #fbeded;
   --secondary-red-200: #d14343;
 
-  --secondary-purple-100: #131314;
+  --secondary-purple-100: #8e66ff;
 
   --secondary-yellow-100: #ffd061;
 }
